Preview patching, improve mismatching target-release handling
Use jdk.compiler-open as the classpath dependency for the package,
require version 0.8.5 as a minimum of the repository runtime.